# Financial-advisor

./: .beamignore  .gitignore  pyproject.toml
financial-bot/: pyproject.toml
financial-bot/financial_bot/: bot_definition.py  chains.py  constants.py  embeddings.py  launch_bot.py  qdrant.py  template.py  ui.py
financial_bot/: bot_definition.py  chains.py  embeddings.py  launch_bot.py  qdrant.py  requirements.txt  template.py
generate-dataset/: pyproject.toml
generate-dataset/generate_dataset/: alpaca_news_api.py  generate_data.py
generate_dataset/: generate_data.py
generate_dataset/utils/: logger.py  paths.py
streaming-pipeline/: pyproject.toml
streaming-pipeline/streaming_pipeline/: alpaca_batch.py  constants.py  embeddings.py  main.py  models.py  qdrant.py  search.py  utils.py
streaming_pipeline/: alpaca_batch.py  embeddings.py  main.py  models.py  qdrant.py  sample.py  utils.py
training-pipeline/: pyproject.toml  requirements.txt
training-pipeline/configs/: dev_inference_config.yaml  dev_training_config.yaml
training-pipeline/training_pipeline/: configs.py  data_proc.py  inference.py  inference_run.py  models.py  prompter.py  train_run.py  training.py  utils.py
training_pipeline/: configs.py  data_proc.py  models.py  prompter.py  requirements.txt  train_run.py  training.py  utils.py
