[tool.poetry]
name = "real-time-financial-advisor"
version = "0.1.0"
description = ""
authors = ["Massyl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bytewax = "^0.21.0"
pydantic = "^2.8.2"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
qdrant-client = "^1.11.1"
python-dotenv = "^1.0.1"
beam = "^0.6.0"
transformers = "^4.44.2"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
