[tool.poetry]
name = "financial-bot"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.20"
qdrant-client = "^1.13.3"
transformers = "^4.49.0"
langchain-community = "^0.3.19"
beam-client = "0.2.148"
fire = "^0.7.0"
gradio = "^5.26.0"
comet-ml = "^3.49.8"
peft = "0.15"
bitsandbytes = "^0.45.5"
torch = {version = "2.7.1", source = "torch-test-pypi"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-test-pypi"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"
